syntax = "proto3";

// option java_multiple_files = true;
// option java_package = "org.xrpl.rpc.v1";
option java_outer_classname = "GossipProto";
// option objc_class_prefix = "HLW";

package gossipmessage;

service GossipMessage 
{
	rpc toLibP2P(Gossip) returns (Control) {}	//Rippled is the client. Libp2p is the server
	rpc toRippled(Gossip) returns (Control) {}

}

message Gossip
{
	bytes message = 1;
	//Not sure about the validator key here
	//I guess the compressed message already has the vazlidator key
	bytes validator_key = 2;
}

message Control
{
	bool stream = 1;
}
